app/components/Input/Input.module.css
/*
 * Copyright 2025 Uppsala University Library
 *
 * This file is part of DiVA Client.
 *
 *     DiVA Client is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     DiVA Client is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 */

.select-wrapper select,
.input,
.combobox-input,
.textarea {
  background: var(--color-background);
  background-repeat: no-repeat;
  width: 100%;
  position: relative;
  border: 1px solid var(--color-input-border);
  border-radius: calc(var(--border-radius) / 2);
  height: var(--input-height);
  font-size: inherit;
  color: var(--color-text);

  &[aria-invalid='true'] {
    border-color: var(--color-error-main);
    color: var(--color-error-main);
  }
}

.input,
.combobox-input {
  padding-left: var(--gap);
}

.textarea {
  resize: vertical;
  min-height: calc(var(--input-height) * 2);
  padding-top: calc(var(--gap) * 1.5);
  padding-left: calc(var(--gap) * 1.5);
  padding-right: calc(var(--gap) * 6);
}

.select-wrapper {
  position: relative;
  width: 100%;
  background: var(--color-background);
}

.select-chevron {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: var(--gap);
  font-size: 1.5em;
  color: var(--color-primary);
  pointer-events: none;
}

.select-adornment {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: var(--gap);
  pointer-events: none;
  width: 1.5rem;

  svg {
    font-size: var(--font-size-icon);
  }
}

.select-wrapper select,
.combobox-input {
  padding-left: var(--gap);
  padding-right: calc(1.5rem + var(--gap) + var(--gap));
}

.select-wrapper select {
  background: none;
  appearance: none;
  cursor: pointer;
  width: 100%;
}

.select-wrapper:has(.select-adornment) select {
  padding-left: calc(1.5rem + var(--gap) + var(--gap));
}

